[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/button_play.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Main_menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/speaker_sound.png" type="Texture" id=3]
[ext_resource path="res://Sprites/speaker_sound_dis.png" type="Texture" id=4]
[ext_resource path="res://Music/Minimal Funky Loop.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Main_menu_backgroun.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Info.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Controls.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Controls"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Controls:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 152 ), Vector2( 64, 64 ), Vector2( 64, 16 ), Vector2( 64, 32 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "normal_cont"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Controls:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 32 ), Vector2( 64, 32 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Controls"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "normal_cont"

[sub_resource type="AnimationNodeStateMachineTransition" id=5]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachine" id=7]
states/Controls/node = SubResource( 3 )
states/Controls/position = Vector2( 222, 85 )
states/normal_cont/node = SubResource( 4 )
states/normal_cont/position = Vector2( 423, 85 )
transitions = [ "Controls", "normal_cont", SubResource( 5 ), "normal_cont", "Controls", SubResource( 6 ) ]
start_node = "normal_cont"

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="Start_button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -36.0
margin_right = 32.0
margin_bottom = 28.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_button" type="TextureButton" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound_button" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_right = -8.0
margin_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="Controls" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -43.0
margin_right = 64.0
margin_bottom = 37.0001
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Controls = SubResource( 1 )
anims/normal_cont = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 8 )
[connection signal="pressed" from="Start_button" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Info_button" to="." method="_on_Info_button_pressed"]
[connection signal="pressed" from="Sound_button" to="." method="_on_Sound_button_pressed"]
